# -

./: .env.example  .env.test  README.md  docker-compose-le.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  custom_logging.py  main.py
backend/app/api_v1/: __init__.py
backend/app/api_v1/projects/: dependences.py  exceptions.py  schemas.py  views.py
backend/app/api_v1/users/: dependences.py  exceptions.py  schemas.py  views.py
backend/app/auth/: exceptions.py  user_validate.py
backend/app/auth/functions/: user.py
backend/app/config/: __init__.py  db_config.py  responses_config.py
backend/app/core/: config.py
backend/app/core/registry/: __init__.py  base_registry.py  db_helper.py
backend/app/core/services/: __init__.py  base_service.py  project_service.py  user_service.py
backend/app/database/: __init__.py
backend/app/entities/: ProjectEntity.py  UserEntity.py  __init__.py
backend/app/models/: Project.py  User.py  __init__.py
backend/app/registry/: README.md  RegistryPermission.py  RegistryPermissionException.py  RegistryResponse.py  RegistryTypes.py  __init__.py
backend/app/registry/DynamoRegistry/: DynamoRegistry.py  DynamoRegistryFactory.py  __init__.py
backend/app/registry/IRegistry/: IRegistry.py  IRegistryCreate.py  IRegistryDelete.py  IRegistryFactory.py  IRegistryRead.py  IRegistryUpdate.py  __init__.py
backend/app/registry/MongoMockRegistry/: MongoMockRegistry.py  MongoMockRegistryFactory.py  __init__.py
backend/app/registry/MongoRegistry/: MongoRegistry.py  (+6 more)
backend/app/routers/: Project.py  User.py  __init__.py  attributes.py  dependences.py  dependencies.py  image.py  images.py  nodes.py  pages.py  projects.py  templates.py  users.py  utils.py
backend/app/schemas/: Project.py  User.py  __init__.py
backend/app/services/: ProjectService.py  ServiceFactory.py  ServiceMediator.py  UserService.py  __init__.py  exceptions.py  project_service.py  user_service.py
backend/tests/: README.md  conftest.py  setup.py  test_projects.py  test_users.py
backend/tests/api/: __init__.py  base.py  nodes.py  projects.py  templates.py  users.py
backend/tests/nodes/: _nodes_get_by_id.py  _nodes_update.py  test_nodes_create.py  test_nodes_delete.py  test_nodes_get_by_id.py  test_nodes_update.py
backend/tests/projects/: test_projects_create.py  test_projects_delete.py  test_projects_get_by_id.py  test_projects_get_by_user.py  test_projects_update.py
backend/tests/templates/: test_templates_create.py
backend/tests/users/: test_users_create.py  test_users_get.py
bot/: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  config_reader.py  main.py  pyproject.toml  requirements.txt
bot/handlers/: __init__.py  start.py
bot/keyboards/: __init__.py  inline.py  menu.py
bot/middlewares/: __init__.py  throttling.py
bot/utils/: __init__.py  webapp.py
(+180 files in other folders)
