[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = [".venv", "venv", "__pycache__"]

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
filetype = "^1.2.0"
Jinja2 = "^3.1.3"
pydantic-settings = "^2.2.1"
boto3 = "^1.34.73"
structlog = "^24.1.0"
asgi-correlation-id = "^4.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
Flake8-pyproject = "^1.2.3"
httpx = "^0.27.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.2"
setuptools = "^69.1.1"
pre-commit = "^3.6.2"
dataclass-wizard = "^0.22.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
