[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["L4zzur <popovnikita01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
cachetools = "^5.3.2"
requests = "^2.31.0"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true